--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "preversion": "./scripts/syncversion.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test test/unit",
+    "test:integration": "node --test test/integration"
   },
   "repository": {
     "type": "git",
