--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "preversion": "./scripts/syncversion.sh",
-    "test": "node --test test/unit",
+    "test": "npm run test:unit",
+    "test:all": "npm run test:unit && npm run test:integration",
+    "test:unit": "node --test test/unit",
     "test:integration": "node --test test/integration"
   },
   "repository": {
