--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,13 +22,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - name: Use ccache
-        uses: hendrikmuhs/ccache-action@2a51777f6f64b7b7bea213601acba8f5f4fdbe03  # v1.2.11
+      - uses: hendrikmuhs/ccache-action@2a51777f6f64b7b7bea213601acba8f5f4fdbe03  # v1.2.11
         with:
           key: centos-stream-${{ inputs.centos_stream_version }}-nodejs-${{ inputs.nodejs_version }}-${{ github.base_ref || github.ref_name }}
           restore-keys: |
             centos-stream-${{ inputs.centos_stream_version }}-nodejs-${{ inputs.nodejs_version }}-${{ github.base_ref || github.ref_name }}
-            centos-stream-${{ inputs.centos_stream_version }}-nodejs-${{ inputs.nodejs_version }}-
           save: ${{ github.event.number == '' }}
       - name: Build container insights-js-client-builder:nodejs-${{ inputs.nodejs_version}}.el${{ inputs.centos_stream_version }}
         run: ./scripts/buildcontainer.sh "${{ inputs.centos_stream_version }}" "${{ inputs.nodejs_version }}"
